# kwhue

./: Cargo.toml  README.md  notes.md  out.rs
src/: config.rs  error.rs  lib.rs  main.rs
src/cli/: mod.rs
src/cli/commands/: admin.rs  light.rs  lights.rs  mod.rs
src/hue/: bridge.rs  client.rs  config_info.rs  lights.rs  mod.rs  new_user.rs
src/hue/api/: config_info.rs  get_light_state.rs  light_state.rs  lights.rs  lights_schemas.rs  mod.rs  set_light_state.rs  state_for_light.rs
src/hue/api/test_data/: config_info.json  light_state.json  lights_respon.json
