[package]
name = "kwhue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
colored = "2.0.0"
confy = "0.5.1"
futures-util = "0.3.25"
itertools = "0.10.5"
mdns = "3.0.0"
reqwest = { version = "0.11.13", features = ["json"] }
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.91"
simple-mdns = { version = "0.4.0", features = ["async-tokio"] }
thiserror = "1.0.38"
tokio = { version = "1.23.0", features = ["full", "time"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

[[bin]]
name = "kwhue"
path = "bin/cli.rs"
